# Spotlight-Hermes

./: .gitignore
C/: CMakeLists.txt  Communicate.cpp  Communicate.h
C/test/: client.cpp  server.cpp
Spotlight-Hermes/: .project  pom.xml
Spotlight-Hermes/src/main/java/: Server.java
